add es http://rb.corp.taobao.com/r/65592/
git-svn-id: http://code.taobao.org/svn/tfs@2406 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/configure.ac
+++ b/branches/dev_from_stable2.5_for_lifecycle/configure.ac
@@ -241,6 +241,8 @@ AC_CONFIG_FILES([Makefile
                  src/name_meta_server/Makefile
                  src/kv_meta_server/Makefile
                  src/rootserver/Makefile
+                 src/life_cycle_manager/Makefile
+                 src/life_cycle_manager/expire_server/Makefile
                  src/tools/Makefile
                  src/tools/rcserver/Makefile
                  src/tools/util/Makefile
