add test see http://rb.corp.taobao.com/r/65985/
git-svn-id: http://code.taobao.org/svn/tfs@2412 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/tests/kv_meta_server/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/tests/kv_meta_server/Makefile.am
@@ -19,9 +19,9 @@ test: check
 TESTS=
 check_PROGRAMS=
 
-noinst_PROGRAMS=test_split_key test_bucket test_object
-TESTS+=test_split_key test_bucket
-check_PROGRAMS+=test_split_key test_bucket test_object
+noinst_PROGRAMS=test_split_key test_bucket test_object test_life_cycle
+TESTS+=test_split_key test_bucket test_life_cycle
+check_PROGRAMS+=test_split_key test_bucket test_object test_life_cycle
 
 test_split_key_SOURCES=test_split_key.cpp
 test_split_key_LDFLAGS=${AM_LDFLAGS} -static-libgcc -lgtest
@@ -31,3 +31,6 @@ test_bucket_LDFLASG=${AM_LDFLAGS} -static-libgcc -lgtest
 
 test_object_SOURCES=test_object.cpp test_kvengine.cpp
 test_object_LDFLASG=${AM_LDFLAGS} -static-libgcc -lgtest
+
+test_life_cycle_SOURCES=test_lifecycle.cpp test_kvengine.cpp
+test_life_cycle_LDFLASG=${AM_LDFLAGS} -static-libgcc -lgtest
