add test see:http://rb.corp.taobao.com/r/67180/
git-svn-id: http://code.taobao.org/svn/tfs@2442 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/tests/kv_meta_server/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/tests/kv_meta_server/Makefile.am
@@ -8,6 +8,7 @@ AM_LDFLAGS=-lpthread -lrt -lc -lm -lgtest $(TAIR_META_LDFLAGS)
 
 LDADD=$(top_builddir)/src/kv_meta_server/libkvmetaserver.a \
 			$(top_builddir)/src/life_cycle_manager/root_manager/librootserver.a\
+			$(top_builddir)/src/life_cycle_manager/expire_server/libexpireserver.a \
 			$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a \
 			$(TAIR_META_LDFLAGS)\
@@ -20,9 +21,9 @@ test: check
 TESTS=
 check_PROGRAMS=
 
-noinst_PROGRAMS=test_split_key test_bucket test_object test_life_cycle test_life_cycle_rootserver
-TESTS+=test_split_key test_bucket test_life_cycle test_life_cycle_rootserver
-check_PROGRAMS+=test_split_key test_bucket test_object test_life_cycle test_life_cycle_rootserver
+noinst_PROGRAMS=test_split_key test_bucket test_object test_life_cycle test_life_cycle_rootserver test_life_cycle_expireserver
+TESTS+=test_split_key test_bucket test_life_cycle test_life_cycle_rootserver test_life_cycle_expireserver
+check_PROGRAMS+=test_split_key test_bucket test_object test_life_cycle test_life_cycle_rootserver test_life_cycle_expireserver
 
 test_split_key_SOURCES=test_split_key.cpp
 test_split_key_LDFLAGS=${AM_LDFLAGS} -static-libgcc -lgtest
@@ -38,3 +39,6 @@ test_life_cycle_LDFLASG=${AM_LDFLAGS} -static-libgcc -lgtest
 
 test_life_cycle_rootserver_SOURCES=test_lifecycle_rootserver.cpp test_kvengine.cpp
 test_life_cycle_rootserver_LDFLASG=${AM_LDFLAGS} -static-libgcc -lgtest
+
+test_life_cycle_expireserver_SOURCES=test_lifecycle_expireserver.cpp test_kvengine.cpp
+test_life_cycle_expireserver_LDFLASG=${AM_LDFLAGS} -static-libgcc -lgtest
