--- a/branches/dev_from_stable2.5_for_lifecycle/src/nameserver/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/nameserver/Makefile.am
@@ -4,9 +4,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbnet\
 	    			$(TAIR_STORE_CPPFLAGS)
 
-#AM_LDFLAGS=-lz -lrt -lpthread -ldl -lgcov
-#AM_LDFLAGS=-lz -lrt -lpthread -ldl -rdynamic ${TCMALLOC_LDFLAGS}
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -rdynamic $(TAIR_STORE_LDFLAGS) -lsnappy
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -rdynamic $(TAIR_STORE_LDFLAGS) -lsnappy ${TCMALLOC_LDFLAGS}
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
