http://rb.corp.taobao.com/r/68240/
git-svn-id: http://code.taobao.org/svn/tfs@2467 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/configure.ac
+++ b/branches/dev_from_stable2.5_for_lifecycle/configure.ac
@@ -67,6 +67,12 @@ fi
 AC_SUBST([READLINE_INCLUDE])
 AC_SUBST([READLINE_LIB])
 
+AC_ARG_WITH([restful-root],
+           AS_HELP_STRING([--with-restful-root],
+           [restful client src path]),
+           TREST_ROOT=${withval})
+AC_SUBST([TREST_ROOT])
+
 AC_ARG_WITH([tair-root],
            AS_HELP_STRING([--with-tair-root],
            [Tair installation path, need when enable uniquestore feature]),
