--- a/branches/dev_from_stable2.5_for_lifecycle/src/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/Makefile.am
@@ -1,4 +1,9 @@
 AUTOMAKE_OPTIONS=foreign
 
-SUBDIRS = common message new_client clientv2 life_cycle_manager dataserver nameserver adminserver \
-rcserver monitor name_meta_server rootserver kv_meta_server checkserver tools life_cycle_manager
+dir_base = common message new_client clientv2 life_cycle_manager dataserver nameserver adminserver \
+rcserver monitor name_meta_server rootserver kv_meta_server checkserver tools 
+if WITH_LIFECYCLE
+SUBDIRS = ${dir_base} life_cycle_manager
+else
+SUBDIRS = ${dir_base}
+endif
