--- a/branches/stable-2.5/configure.ac
+++ b/branches/stable-2.5/configure.ac
@@ -81,7 +81,7 @@ if ! test -d "${TAIR_ROOT}/include" -a -d "${TBLIB_ROOT}/lib"; then
   exit 1;
 fi
 TAIR_STORE_CPPFLAGS="-DWITH_UNIQUE_STORE -I${TAIR_ROOT}/include"
-TAIR_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz"
+TAIR_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
 AC_SUBST([TAIR_STORE_CPPFLAGS])
 AC_SUBST([TAIR_STORE_LDFLAGS])
 
@@ -115,7 +115,7 @@ if test "${enable_taircache}" = "yes"; then
                 exit 1;
         fi
         TAIR_CACHE_CPPFLAGS="-DWITH_TAIR_CACHE -I${TAIR_ROOT}/include"
-        TAIR_CACHE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz"
+        TAIR_CACHE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
 fi
 AM_CONDITIONAL([WITH_TAIR_CACHE],[test x$enable_taircache = xyes])
 AC_SUBST([TAIR_CACHE_CPPFLAGS])
@@ -132,7 +132,7 @@ if test "${enable_kvmeta}" = "yes"; then
                 exit 1;
         fi
         TAIR_META_CPPFLAGS="-DWITH_TAIR_META -I${TAIR_ROOT}/include"
-        TAIR_META_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz"
+        TAIR_META_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
 fi
 AM_CONDITIONAL([WITH_KV_META],[test x$enable_kvmeta = xyes])
 AC_SUBST([TAIR_META_CPPFLAGS])
