--- a/branches/dev_from_stable2.5_for_lifecycle/src/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS=foreign
 
-dir_base = common message new_client clientv2 life_cycle_manager dataserver nameserver adminserver \
+dir_base = common message new_client clientv2 dataserver nameserver adminserver \
 rcserver monitor name_meta_server rootserver kv_meta_server checkserver tools 
 if WITH_LIFECYCLE
 SUBDIRS = ${dir_base} life_cycle_manager
