--- a/branches/dev_from_stable2.5_for_lifecycle/src/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/Makefile.am
@@ -1,9 +1,11 @@
 AUTOMAKE_OPTIONS=foreign
 
-dir_base = common message new_client clientv2 dataserver nameserver adminserver \
-rcserver monitor name_meta_server rootserver kv_meta_server checkserver tools 
 if WITH_LIFECYCLE
-SUBDIRS = ${dir_base} life_cycle_manager
+SUBDIRS = common message new_client clientv2 dataserver nameserver adminserver \
+					rcserver monitor name_meta_server rootserver kv_meta_server checkserver \
+					life_cycle_manager tools
 else
-SUBDIRS = ${dir_base}
+SUBDIRS = common message new_client clientv2 dataserver nameserver adminserver \
+					rcserver monitor name_meta_server rootserver kv_meta_server checkserver \
+					tools
 endif
