--- a/branches/dev_from_stable2.5_for_lifecycle/src/life_cycle_manager/expire_server/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/life_cycle_manager/expire_server/Makefile.am
@@ -1,14 +1,15 @@
 AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet \
-						  $(TAIR_META_CPPFLAGS) \
+						  $(TAIR_META_CPPFLAGS) $(MYSQL_CFLAGS)\
 						-I$(TREST_ROOT)/include
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -ljson -lcurl -lidn $(TAIR_META_LDFLAGS)
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -ljson -lcurl -lidn $(TAIR_META_LDFLAGS) $(MYSQL_LDFLAGS)
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
 			$(TAIR_META_LDFLAGS) \
+			$(top_builddir)/src/common/mysql_cluster/libkvengine_mysql.a \
       $(TBLIB_ROOT)/lib/libtbnet.a \
       $(TBLIB_ROOT)/lib/libtbsys.a \
 			$(TREST_ROOT)/lib/libtfs_cpp_restful_client.a 
