change my sql for mysql cluster
git-svn-id: http://code.taobao.org/svn/tfs@2509 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/src/tools/metaserver/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/tools/metaserver/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lz -lrt -lpthread -ldl $(READLINE_LIB) -luuid -lsnappy $(MYSQL_LDFLAGS)
 
-bin_PROGRAMS =  dump2mysql meta_transfer txt2new txt2new_V2 check_old_new check_old_new_V2 sync_nginx2kv go_tair_for_kv  # del_from_tair put_bucket_to_tair
+bin_PROGRAMS =  dump2mysql press_select meta_transfer txt2new txt2new_V2 check_old_new check_old_new_V2 sync_nginx2kv go_tair_for_kv  # del_from_tair put_bucket_to_tair
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/new_client/.libs/libtfsclient.a \
@@ -18,6 +18,7 @@ LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
         $(TBLIB_ROOT)/lib/libtbnet.a\
         $(TBLIB_ROOT)/lib/libtbsys.a
 
+press_select_SOURCES = press_select.cpp
 dump2mysql_SOURCES = dump2mysql.cpp
 meta_transfer_SOURCES = trans_meta.cpp
 txt2new_SOURCES = txt2newmeta.cpp
