[new_feature]  添加查询删除进度的工具 see http://rb.corp.taobao.com/r/68076 [1] rt [2] 当查询时没有指定es在整个任务的编号时，由server帮他查询
git-svn-id: http://code.taobao.org/svn/tfs@2513 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/src/tools/metaserver/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/tools/metaserver/Makefile.am
@@ -27,5 +27,6 @@ check_old_new_SOURCES = check_old_new.cpp
 check_old_new_V2_SOURCES = check_old_new_V2.cpp
 sync_nginx2kv_SOURCES = sync_nginx2kv.cpp
 go_tair_for_kv_SOURCES = go_tair_for_kv.cpp
+query_progress_SOURCES = query_progress.cpp
 #del_from_tair_SOURCES = del_from_tair.cpp
 #put_bucket_to_tair_SOURCES = put_bucket_to_tair.cpp
