--- a/branches/stable-2.5/src/life_cycle_manager/expire_server/Makefile.am
+++ b/branches/stable-2.5/src/life_cycle_manager/expire_server/Makefile.am
@@ -4,12 +4,13 @@ AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
 						  $(TAIR_META_CPPFLAGS) $(MYSQL_CFLAGS)\
 						-I$(TREST_ROOT)/include
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -ljson -lcurl -lidn $(TAIR_META_LDFLAGS) $(MYSQL_LDFLAGS)
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -ljson -lcurl -lidn 
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
-			$(TAIR_META_LDFLAGS) \
 			$(top_builddir)/src/common/mysql_cluster/libkvengine_mysql.a \
+			$(TAIR_META_LDFLAGS) \
+			$(MYSQL_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a \
       $(TBLIB_ROOT)/lib/libtbsys.a \
 			$(TREST_ROOT)/lib/libtfs_cpp_restful_client.a 
