--- a/branches/stable-2.5/conf/cs.conf
+++ b/branches/stable-2.5/conf/cs.conf
@@ -21,7 +21,7 @@ work_dir=/home/admin/tfs
 dev_name= bond0
 
 #work thread count default 4
-thread_count = 4
+thread_count = 16
 
 #ip addr
 ip_addr = 10.232.35.40
@@ -30,6 +30,9 @@ ip_addr = 10.232.35.40
 
 # nameserver ip addr(vip)
 ns_ip = 10.232.36.201:8100
+
+# slave ns ip
+peer_ns_ip = 10.232.36.201:8200
 
 # cluster id
 cluster_id = 1
@@ -47,8 +50,13 @@ check_interval = 86400
 # block_check_cost = 50
 
 # check threads
-thread_count = 4
+thread_count = 16
 
-# check retry times
-check_retry_turn = 3
+# check retry times in one check
+# check_retry_turn = 2
 
+# check flag, 0: just check, 1: check an sync
+check_flag = 1
+
+# ignore comparing recent modify
+# check_reserve_time = 180
