--- a/branches/stable-2.5/src/common/mysql_cluster/Makefile.am
+++ b/branches/stable-2.5/src/common/mysql_cluster/Makefile.am
@@ -16,5 +16,5 @@ noinst_LIBRARIES=libkvengine_mysql.a
 
 kvengine_mysql_INCLUDE= database_pool.h  mysql_database_helper.h  mysql_engine_helper.h
 
-libkvengine_mysql_a_SOURCES=database_pool.cpp  mysql_database_helper.cpp mysql_engine_helper.cpp $(kvengine_mysql)
+libkvengine_mysql_a_SOURCES=database_pool.cpp  mysql_database_helper.cpp mysql_engine_helper.cpp $(kvengine_mysql_INCLUDE)
 
