--- a/branches/stable-2.5/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5/src/tools/nameserver/Makefile.am
@@ -44,5 +44,5 @@ endif
 
 check_replication_SOURCES=check_replication.cpp
 repair_file_tool_SOURCES=repair_file_tool.cpp
-stat_tool_SOURCES=stat_main.cpp stat_tool.cpp common.cpp common.h
+stat_tool_SOURCES=stat_main.cpp stat_tool.cpp stat_tool.h common.cpp common.h
 gen_compact_blk_order_SOURCES = gen_compact_blk_order.cpp common.cpp common.h
