add rcstat.h to Makefile.am
git-svn-id: http://code.taobao.org/svn/tfs@2618 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/src/tools/rcserver/Makefile.am
+++ b/branches/stable-2.5/src/tools/rcserver/Makefile.am
@@ -22,5 +22,5 @@ LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 
 parse_SOURCES = parse_session_id.cpp
 gene_SOURCES = gene_session_id.cpp
-rcstat_SOURCES = rcstat.cpp
+rcstat_SOURCES = rcstat.cpp rcstat.h
 
