change checkserver default param and config.
git-svn-id: http://code.taobao.org/svn/tfs@2664 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/conf/cs.conf
+++ b/branches/stable-2.5/conf/cs.conf
@@ -47,16 +47,22 @@ check_interval = 86400
 # block_check_interval = 10
 
 # block check cost, mill seconds
+# compare cluste in same city, eg: both in Hangzhou advise 50ms
+# comopare cluster in different city, eg: Hangzhou vs Qingdao advise 150ms
 # block_check_cost = 50
 
 # check threads
 thread_count = 16
 
 # check retry times in one check
-# check_retry_turn = 2
+# check_retry_turn = 3
 
 # check flag, 0: just check, 1: check an sync
 check_flag = 1
 
 # ignore comparing recent modify
 # check_reserve_time = 180
+
+# force check all 
+# if set, checkserver only do check, won't sync
+# force_check_all = 0
