add kv_ms sql. see http://rb.corp.taobao.com/r/77941/
git-svn-id: http://code.taobao.org/svn/tfs@2692 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/configure.ac
+++ b/branches/stable-2.5/configure.ac
@@ -239,6 +239,7 @@ AC_CONFIG_FILES([Makefile
                  sql/Makefile
                  sql/ms/Makefile
                  sql/rcs/Makefile
+                 sql/kv_ms/Makefile
                  scripts/Makefile
                  scripts/ha/Makefile
                  src/Makefile
