modify file name encode. see http://rb.corp.taobao.com/r/78257/
git-svn-id: http://code.taobao.org/svn/tfs@2695 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/configure.ac
+++ b/branches/stable-2.5/configure.ac
@@ -246,6 +246,7 @@ AC_CONFIG_FILES([Makefile
                  src/adminserver/Makefile
                  src/new_client/Makefile
                  src/clientv2/Makefile
+                 src/requester/Makefile
                  src/common/Makefile
                  src/common/mysql_cluster/Makefile
                  src/dataserver/Makefile
