--- a/branches/stable-2.5/src/tools/cluster/Makefile.am
+++ b/branches/stable-2.5/src/tools/cluster/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -lsnappy
 
-bin_PROGRAMS = calc_ip_addr transfer  split_item_tool
+bin_PROGRAMS = calc_ip_addr transfer split_item_tool block_tool_v2
 LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
   $(top_builddir)/src/requester/libtfsrequester.a\
 	$(top_builddir)/src/new_client/.libs/libtfsclient.a\
@@ -17,18 +17,10 @@ LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 	$(TBLIB_ROOT)/lib/libtbnet.a\
 	$(TBLIB_ROOT)/lib/libtbsys.a
 
+transfer_SOURCES =  transfer.cpp transfer.h
 
-sync_by_blk_SOURCES =  sync_by_blk.cpp sync_file_base.cpp sync_file_base.h
-sync_by_log_SOURCES =  sync_by_log.cpp sync_file_base.cpp sync_file_base.h
-sync_by_file_SOURCES =  sync_by_file.cpp sync_file_base.cpp sync_file_base.h
-
-transfer_SOURCES =  transfer.cpp 
 split_item_tool_SOURCES = split_item_tool.cpp 
 
-sync_by_filev2_SOURCES =  sync_by_file_v2.cpp sync_file_base_v2.cpp sync_file_base_v2.h
-
-transfer_by_file_SOURCES = transfer_by_file.cpp sync_file_base.h
-block_tool_SOURCES = blocktool.cpp
 block_toolv2_SOURCES = block_tool_v2.cpp
 
 calc_ip_addr_SOURCES= calc_ip_addr.cpp
