--- a/branches/stable-2.5/src/tools/Makefile.am
+++ b/branches/stable-2.5/src/tools/Makefile.am
@@ -1,3 +1,3 @@
 AUTOMAKE_OPTIONS=foreign
 
-SUBDIRS = util dataserver nameserver adminserver rcserver transfer cluster metaserver workers
+SUBDIRS = util dataserver nameserver adminserver rcserver cluster metaserver workers
