http agent http://rb.corp.taobao.com/r/79296/
git-svn-id: http://code.taobao.org/svn/tfs@2719 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/src/tools/rcserver/Makefile.am
+++ b/branches/stable-2.5/src/tools/rcserver/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lz -lrt -lpthread -ldl $(READLINE_LIB) -luuid
 
-bin_PROGRAMS = parse gene rcstat
+bin_PROGRAMS = parse gene rcstat test_http_agent
 
 LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 	$(top_builddir)/src/dataserver/libdataserver.a\
@@ -23,4 +23,5 @@ LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 parse_SOURCES = parse_session_id.cpp
 gene_SOURCES = gene_session_id.cpp
 rcstat_SOURCES = rcstat.cpp rcstat.h
+test_http_agent_SOURCES = test_http_agent.cpp http_agent.cpp
 
