--- a/branches/stable-2.5/configure.ac
+++ b/branches/stable-2.5/configure.ac
@@ -269,6 +269,7 @@ AC_CONFIG_FILES([Makefile
                  src/tools/cluster/Makefile
                  src/tools/workers/Makefile
                  src/checkserver/Makefile
+                 tests/common/Makefile
                  src/tools/metaserver/Makefile])
                  #tests/Makefile
                  #tests/batch/Makefile
