refact life cycle see http://rb.corp.taobao.com/r/80517/
git-svn-id: http://code.taobao.org/svn/tfs@2729 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_from_stable2.5_for_lifecycle/src/life_cycle_manager/expire_server/Makefile.am
+++ b/branches/dev_from_stable2.5_for_lifecycle/src/life_cycle_manager/expire_server/Makefile.am
@@ -4,12 +4,11 @@ AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
 						  $(TAIR_META_CPPFLAGS) $(MYSQL_CFLAGS)\
 						-I$(TREST_ROOT)/include
 
-MY_HOME=/home/xueya.yy/tfs_bin
 AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -ljson -lcurl -lidn $(TAIR_META_LDFLAGS) $(MYSQL_LDFLAGS)
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
-		  $(MY_HOME)/lib/libtfsclient.a\
+		  $(TREST_ROOT)/lib/libtfs_cpp_restful_client.a\
       $(TAIR_META_LDFLAGS) \
 			$(top_builddir)/src/common/mysql_cluster/libkvengine_mysql.a \
       $(TBLIB_ROOT)/lib/libtbnet.a \
@@ -25,9 +24,9 @@ libexpireserver_a_SOURCES= expire_heart_manager.cpp  expire_service.cpp  clean_t
 													$(tair_kv_source)  $(expireserver_INCLUDE)
 
 
-bin_PROGRAMS = expireserver clean_test
+bin_PROGRAMS = expireserver 
 
 expireserver_SOURCES=$(libexpireserver_a_SOURCES) main.cpp
-clean_test_SOURCES=clean_test.cpp
+#clean_test_SOURCES=clean_test.cpp
 
 
