fix problems in build.
git-svn-id: http://code.taobao.org/svn/tfs@2749 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/src/tools/cluster/Makefile.am
+++ b/branches/stable-2.5/src/tools/cluster/Makefile.am
@@ -23,4 +23,4 @@ split_item_tool_SOURCES=split_item_tool.cpp
 
 block_toolv2_SOURCES=block_tool_v2.cpp
 
-calc_ip_addr_SOURCES=calc_ip_addr.cpp
+# calc_ip_addr_SOURCES=calc_ip_addr.cpp
