--- a/branches/stable-2.5/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5/src/tools/nameserver/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz -lsnappy
 
-bin_PROGRAMS = admintool ssm tfstool check_replication repair_file_tool stat_tool gen_compact_blk_order 
+bin_PROGRAMS = admintool tfstool ssm check_replication repair_file_tool stat_tool gen_compact_blk_order 
 if WITH_TAIR_CACHE
 bin_PROGRAMS += remote_block_cache_tool
 endif
@@ -33,7 +33,7 @@ ssm_SOURCES = main.cpp show.cpp show_factory.cpp metacmp.cpp cmp_factory.cpp com
 
 admintool_SOURCES = admintool.cpp
 #performance_SOURCES = performance.cpp
-syncbyfile_SOURCES=sync_by_file.cpp
+#syncbyfile_SOURCES=sync_by_file.cpp
 #repair_block_info_SOURCES=repair_block_info.cpp
 if WITH_TAIR_CACHE
 remote_block_cache_tool_SOURCES=remote_block_cache_tool.cpp
