[new_feature]  修改日志级别，增加调试信息 see http://rb.corp.taobao.com/r/81351 [feature] 1. 修改日志级别 2. 增加调试日志 3. 修改单个BLOCK LAST_UPDATE_TIME用法
git-svn-id: http://code.taobao.org/svn/tfs@2760 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/src/message/Makefile.am
+++ b/branches/stable-2.5/src/message/Makefile.am
@@ -22,7 +22,8 @@ HEADER=dump_plan_message.h client_cmd_message.h heart_message.h\
 			 block_info_message_v2.h write_file_message_v2.h close_file_message_v2.h\
 			 read_file_message_v2.h unlink_file_message_v2.h read_data_message_v2.h read_data_message_v2.h\
 			 write_data_message_v2.h read_index_message_v2.h write_index_message_v2.h ec_meta_message.h\
-			 expire_message.h http_packet_message.h http_message_factory.h
+			 expire_message.h 
+
 libtfsmessage_a_SOURCES = dump_plan_message.cpp client_cmd_message.cpp heart_message.cpp\
 													oplog_sync_message.cpp crc_error_message.cpp reload_message.cpp\
 													unlink_file_message.cpp file_info_message.cpp rollback_message.cpp\
@@ -35,7 +36,7 @@ libtfsmessage_a_SOURCES = dump_plan_message.cpp client_cmd_message.cpp heart_mes
 													get_tables_from_rts_message.cpp update_table_message.cpp\
 													rts_rts_heart_message.cpp checkserver_message.cpp erasure_code_message.cpp \
 													dataserver_task_message.cpp resolve_block_version_conflict_message.cpp \
-													kv_meta_message.cpp kv_rts_message.cpp http_packet_message.cpp http_message_factory.cpp \
+													kv_meta_message.cpp kv_rts_message.cpp \
 													family_info_message.cpp block_info_message_v2.cpp write_file_message_v2.cpp \
 													close_file_message_v2.cpp read_file_message_v2.cpp unlink_file_message_v2.cpp \
 												  read_data_message_v2.cpp write_data_message_v2.cpp read_index_message_v2.cpp \
