--- a/branches/stable-2.5/src/requester/Makefile.am
+++ b/branches/stable-2.5/src/requester/Makefile.am
@@ -14,5 +14,6 @@ LDADD=$(top_builddir)/src/message/libtfsmessage.a\
 noinst_LIBRARIES = libtfsrequester.a
 
 libtfsrequester_a_SOURCES=ns_requester.cpp ds_requester.cpp misc_requester.cpp \
-												ns_requester.h ds_requester.h misc_requester.h
+												ns_requester.h ds_requester.h misc_requester.h monitor_key_rule_manager.h\
+												monitor_key_rule_manager.cpp
 
