c++ client bug fix. see http://rb.corp.taobao.com/r/84853/
git-svn-id: http://code.taobao.org/svn/tfs@2833 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
@@ -44,7 +44,7 @@ read_index_tool_SOURCES = read_index_tool.cpp
 
 check_down_disk_data_SOURCES = check_down_disk_data.cpp
 
-recover_disk_data_to_clusterv2_SOURCES = recover_disk_data_to_cluster_v2.cpp
+#recover_disk_data_to_clusterv2_SOURCES = recover_disk_data_to_cluster_v2.cpp
 
 #recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
 
