prepare for merge client. see http://rb.corp.taobao.com/r/86205/
git-svn-id: http://code.taobao.org/svn/tfs@2854 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/src/message/Makefile.am
+++ b/branches/stable-2.5/src/message/Makefile.am
@@ -22,7 +22,7 @@ HEADER=dump_plan_message.h client_cmd_message.h heart_message.h\
 			 block_info_message_v2.h write_file_message_v2.h close_file_message_v2.h\
 			 read_file_message_v2.h unlink_file_message_v2.h read_data_message_v2.h read_data_message_v2.h\
 			 write_data_message_v2.h read_index_message_v2.h write_index_message_v2.h ec_meta_message.h\
-			 expire_message.h 
+			 expire_message.h client_ns_keepalive_message.h
 
 libtfsmessage_a_SOURCES = dump_plan_message.cpp client_cmd_message.cpp heart_message.cpp\
 													oplog_sync_message.cpp crc_error_message.cpp reload_message.cpp\
@@ -40,7 +40,8 @@ libtfsmessage_a_SOURCES = dump_plan_message.cpp client_cmd_message.cpp heart_mes
 													family_info_message.cpp block_info_message_v2.cpp write_file_message_v2.cpp \
 													close_file_message_v2.cpp read_file_message_v2.cpp unlink_file_message_v2.cpp \
 												  read_data_message_v2.cpp write_data_message_v2.cpp read_index_message_v2.cpp \
-													write_index_message_v2.cpp ec_meta_message.cpp expire_message.cpp $(HEADER)
+													write_index_message_v2.cpp ec_meta_message.cpp expire_message.cpp \
+													client_ns_keepalive_message.cpp $(HEADER)
 
 libtfsmessage_a_CPPFLAGS = $(AM_CPPFLAGS)
 
