--- a/branches/stable-2.5.1/src/clientv2/Makefile.am
+++ b/branches/stable-2.5.1/src/clientv2/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS=-I${top_srcdir}/src\
+AM_CPPFLAGS=-fPIC -I${top_srcdir}/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
 	    -I$(TBLIB_ROOT)/include/tbnet\
 			$(TAIR_CACHE_CPPFLAGS)
