[new_feature]  解决删除多余备份时无法正确选择出备份的问题 see http://rb.corp.taobao.com/r/86827 [feature] 1. 解决删除多余备份时无法正确选择出备份的问题    原因： 在改造之前NAMESERVER没有记录每个BLOCK不同备份的版本，所有在删除多余备份时无法正确选择出应该的删除的备份    改选： NAMESERVER记录每个备份的版本， 延后解决删除多余备份
git-svn-id: http://code.taobao.org/svn/tfs@2864 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/nameserver/Makefile.am
+++ b/branches/stable-2.5.1/src/nameserver/Makefile.am
@@ -19,9 +19,9 @@ oplog.h oplog_sync_manager.h server_collect.h server_manager.h task.h task_manag
 family_collect.h family_manager.h tair_helper.h
 
 
-NAMSERVER_SOURCE_LIST=block_collect.cpp block_manager.cpp  server_collect.cpp server_manager.cpp\
+NAMSERVER_SOURCE_LIST=ns_define.cpp block_collect.cpp block_manager.cpp  server_collect.cpp server_manager.cpp\
 	task.cpp task_manager.cpp family_collect.cpp family_manager.cpp block_id_factory.cpp global_factory.cpp \
-	ns_define.cpp oplog.cpp oplog_sync_manager.cpp heart_manager.cpp  layout_manager.cpp client_request_server.cpp\
+	oplog.cpp oplog_sync_manager.cpp heart_manager.cpp  layout_manager.cpp client_request_server.cpp\
 	tair_helper.cpp  nameserver.cpp $(NAMESERVER_SOURCE_LIST_HEADER)
 
 libnameserver_a_SOURCES=$(NAMSERVER_SOURCE_LIST)
