fix creat_table.sql for kv http://rb.corp.taobao.com/r/88763/
git-svn-id: http://code.taobao.org/svn/tfs@2890 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/conf/lifecycle_expire.conf
+++ b/branches/stable-2.5/conf/lifecycle_expire.conf
@@ -8,7 +8,7 @@ ip_addr = 10.172.1.2
 
 port = 5678
 
-thread_count = 35
+thread_count = 20
 
 [expireserver]
 
@@ -26,4 +26,8 @@ ers_ip_port = 10.172.1.1:1234
 
 nginx_root = 10.172.5.5:8066
 
+#this appkey is used init restful cilent
 es_appkey = yourappkey
+
+#scan pre xx days expire time Default pre 1 days
+re_clean_days = 1
