fix lifecycle root bin_PROGRAMS http://rb.corp.taobao.com/r/89969/
git-svn-id: http://code.taobao.org/svn/tfs@2908 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5/src/life_cycle_manager/root_manager/Makefile.am
+++ b/branches/stable-2.5/src/life_cycle_manager/root_manager/Makefile.am
@@ -24,8 +24,8 @@ ROOTSERVER_SOURCE_LIST=exp_root_server.cpp exp_server_manager.cpp handle_task_he
 librootserver_a_SOURCES=$(ROOTSERVER_SOURCE_LIST)
 librootserver_a_LIBFLAGS=$(AM_LDFLAGS)
 
-bin_PROGRAMS = rootserver
+bin_PROGRAMS = expirerootserver
 
-rootserver_SOURCES=$(ROOTSERVER_SOURCE_LIST) service.cpp
+expirerootserver_SOURCES=$(ROOTSERVER_SOURCE_LIST) service.cpp
 
 
