--- a/branches/stable-2.5/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5/src/tools/dataserver/Makefile.am
@@ -15,7 +15,8 @@ bin_PROGRAMS = clear_file_system\
                reverse_name\
                tfsping\
 							 check_down_disk_data\
-               check_super_block
+               check_super_block \
+							 safe_remove_block
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -54,6 +55,9 @@ read_index_tool_SOURCES = read_index_tool.cpp
 #view_local_key_SOURCES = view_local_key.cpp
 
 check_down_disk_data_SOURCES = check_down_disk_data.cpp
+
+safe_remove_block_SOURCES = safe_remove_block.cpp
+
 #recover_disk_data_to_clusterv2_SOURCES = recover_disk_data_to_cluster_v2.cpp
 #recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
 
