[new_feature]  修复打包过程中出的错误 see http://rb.corp.taobao.com/r/95184 [feature] 1. 修复打包过程中出的错误
git-svn-id: http://code.taobao.org/svn/tfs@2963 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/configure.ac
+++ b/branches/stable-2.5.1/configure.ac
@@ -94,7 +94,7 @@ if ! test -d "${TAIR_ROOT}/include" -a -d "${TBLIB_ROOT}/lib"; then
   exit 1;
 fi
 TAIR_STORE_CPPFLAGS="-DWITH_UNIQUE_STORE -I${TAIR_ROOT}/include"
-TAIR_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
+TAIR_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a  -L/usr/lib64/boost1.46.1 -lboost_thread -lz -lsnappy"
 AC_SUBST([TAIR_STORE_CPPFLAGS])
 AC_SUBST([TAIR_STORE_LDFLAGS])
 
@@ -243,7 +243,6 @@ AC_CONFIG_FILES([Makefile
                  scripts/Makefile
                  scripts/ha/Makefile
                  src/Makefile
-                 src/new_client/Makefile
                  src/clientv2/Makefile
                  src/requester/Makefile
                  src/common/Makefile
@@ -266,9 +265,9 @@ AC_CONFIG_FILES([Makefile
                  src/tools/dataserver/Makefile
                  src/tools/nameserver/Makefile
                  src/tools/cluster/Makefile
-                 src/tools/workers/Makefile])
-                 #tests/Makefile
-                 #tests/batch/Makefile
+                 src/tools/workers/Makefile
+                 tests/Makefile
+                 tests/batch/Makefile])
                  #tests/rcserver/Makefile
                  #tests/kv_meta_server/Makefile
                  #tests/name_meta_server/Makefile
