[new_feature]  修改Makefile.am 及修复编组失败时将错误码返回 see http://rb.corp.taobao.com/r/95827 [feature] 1. 修改Makefile.am以及configure.ac 2. 编组失败时将错误码返回
git-svn-id: http://code.taobao.org/svn/tfs@2978 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/configure.ac
+++ b/branches/stable-2.5.1/configure.ac
@@ -265,9 +265,9 @@ AC_CONFIG_FILES([Makefile
                  src/tools/dataserver/Makefile
                  src/tools/nameserver/Makefile
                  src/tools/cluster/Makefile
-                 src/tools/workers/Makefile
-                 tests/Makefile
-                 tests/batch/Makefile])
+                 src/tools/workers/Makefile])
+                 #tests/Makefile
+                 #tests/batch/Makefile])
                  #tests/rcserver/Makefile
                  #tests/kv_meta_server/Makefile
                  #tests/name_meta_server/Makefile
