--- a/branches/stable-2.5.1/src/clientv2/Makefile.am
+++ b/branches/stable-2.5.1/src/clientv2/Makefile.am
@@ -1,7 +1,7 @@
 AM_CPPFLAGS=-I${top_srcdir}/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
 	    -I$(TBLIB_ROOT)/include/tbnet\
-			$(TAIR_CACHE_CPPFLAGS)
+			-I$(TAIR_CACHE_CPPFLAGS)
 
 AM_LDFLAGS=-lrt -lpthread -ldl -luuid $(TAIR_CACHE_LDFLAGS) 
 
