--- a/branches/stable-2.5.1/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/nameserver/Makefile.am
@@ -3,10 +3,9 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
       -I$(TBLIB_ROOT)/include/tbnet\
 	    $(READLINE_INCLUDE)\
-			$(TAIR_STORE_CPPFLAGS)\
-  		$(TAIR_CACHE_CPPFLAGS) 
+			$(TAIR_STORE_CPPFLAGS)
 
-AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz
+AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz $(TAIR_CACHE_LDFLAGS)
 
 bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order # import_family_info export_family_info
 
