add migrateserver start/stop to tfs script. http://rb.corp.taobao.com/r/97409/
git-svn-id: http://code.taobao.org/svn/tfs@3067 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/conf/ds.conf
+++ b/branches/stable-2.5.1/conf/ds.conf
@@ -110,3 +110,11 @@ sync_file_entry_dest_addr=127.0.0.1:3299
 #
 #sync_file_entry_queue_warn_ratio=0.8
 
+#business_port_count=
+#heart_port_count=
+
+#backup cluster_version_list vip:port:1(2)
+#cluster_version_list=
+
+#block migrate do between local machine's migrateserver
+#migrate_server_addr=127.0.0.1:3299
