--- a/branches/stable-2.5.1/conf/ms.conf
+++ b/branches/stable-2.5.1/conf/ms.conf
@@ -30,3 +30,12 @@ ipaddr=192.168.0.1
 #source ns port
 port=3100
 
+# block out of hot_time_range be treated cool block, default Two month(2 * 31 * 86400)
+hot_time_range=5356800
+
+balance_percent=0.05
+
+# system disk and data(full) disk ratio for block visit weight calculate
+# last_access_time_ratio : read_ratio : write_ratio : update_ratio : unlink_ratio
+system_disk_access_ratio=50:20:20:5:5
+full_disk_access_ratio=50:10:30:5:5
