copy packet data when decode. see http://rb.corp.taobao.com/r/98704/
git-svn-id: http://code.taobao.org/svn/tfs@3100 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/easy_dev/configure.ac
+++ b/branches/easy_dev/configure.ac
@@ -72,6 +72,12 @@ AC_ARG_WITH([restful-root],
            TREST_ROOT=${withval})
 AC_SUBST([TREST_ROOT])
 
+AC_ARG_WITH([libeasy-root],
+           AS_HELP_STRING([--with-libeasy-root],
+           [restful client install path]),
+           EASY_ROOT=${withval})
+AC_SUBST([EASY_ROOT])
+
 AC_ARG_ENABLE([lifecycle],
            AS_HELP_STRING([--enable-lifecycle],
            [enable life cycle module use --with-restful-root to specify path]),
