fix rpm packet problem.
git-svn-id: http://code.taobao.org/svn/tfs@3107 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/easy_dev/src/clientv2/Makefile.am
+++ b/branches/easy_dev/src/clientv2/Makefile.am
@@ -22,7 +22,7 @@ ld_fg = $(AM_LDFLAGS) \
         $(top_srcdir)/src/requester/libtfsrequester.a \
         $(top_srcdir)/src/message/libtfsmessage.a \
         $(top_srcdir)/src/common/libtfscommon.a \
-				$(EASY_ROOT)/lib/libeasy.a
+				$(EASY_ROOT)/lib64/libeasy.a
 
 libtfsclientv2_la_SOURCES = ${api_source_list}
 libtfsclientv2_la_LIBADD = ${ld_fg}
