--- a/branches/easy_dev/src/nameserver/Makefile.am
+++ b/branches/easy_dev/src/nameserver/Makefile.am
@@ -11,7 +11,7 @@ LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
       $(TBLIB_ROOT)/lib/libtbnet.a \
       $(TBLIB_ROOT)/lib/libtbsys.a \
-			$(EASY_ROOT)/lib/libeasy.a
+			$(EASY_ROOT)/lib64/libeasy.a
 
 noinst_LIBRARIES=libnameserver.a
 
