use sole libeasy eio for heartbeat. see http://rb.corp.taobao.com/r/99731/
git-svn-id: http://code.taobao.org/svn/tfs@3134 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/easy_dev/configure.ac
+++ b/branches/easy_dev/configure.ac
@@ -255,9 +255,9 @@ AC_CONFIG_FILES([Makefile
                  src/common/mysql_cluster/Makefile
                  src/dataserver/Makefile
                  src/message/Makefile
-                 src/nameserver/Makefile])
+                 src/nameserver/Makefile
+                 src/monitor/Makefile])
                  #src/adminserver/Makefile
-                 #src/monitor/Makefile
                  #src/new_client/Makefile
                  #src/rcserver/Makefile
                  #src/name_meta_server/Makefile
