--- a/branches/easy_dev/src/Makefile.am
+++ b/branches/easy_dev/src/Makefile.am
@@ -10,4 +10,4 @@ else
 #					tools
 endif
 
-SUBDIRS = common message requester clientv2 dataserver nameserver
+SUBDIRS = common message requester clientv2 dataserver nameserver monitor
